--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -4,14 +4,22 @@
     <meta charset="utf-8" />
     <title></title>
 
+    <script src="js/lib/knockout-3.5.0.js"></script>
     <script src="js/statsDataService.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 data-bind="text: appName"></h1>
+
+    <div data-bind="visible: loading">Loading data ...</div>
 
     <script>
+        let vm = new KickerStatsAppViewModel();
+
+        ko.applyBindings(vm);
+
         kickerStatsDataService.fetchData(function (data) {
-            console.log(data);
+            vm.loadData(data);
         });
     </script>
 </body>
