--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -26,6 +26,23 @@
         <span data-bind="text: scoreA"></span> - <span data-bind="text: scoreB"></span>
     </div>
 
+    <h2>All Players</h2>
+    <div data-bind="foreach: analysis().allPlayers">
+        <div data-bind="text: $data"></div>
+    </div>
+
+    <h2>Team Stats</h2>
+    <div data-bind="foreach: analysis().teamStats">
+        <!--<span data-bind="text: team.keeper" /> - <span data-bind="text: team.striker" />-->
+        <div>
+            <span data-bind="text: team.keeper"></span>
+            <span>-</span>
+            <span data-bind="text: team.striker"></span>
+            <span data-bind="text: gamesWon"></span>
+            (<span data-bind="text: gamesPlayed"></span>)
+        </div>
+    </div>
+
     <script>
         let vm = new KickerStatsAppViewModel();
 
