Add team win ratio

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -38,8 +38,8 @@
             <span data-bind="text: team.keeper"></span>
             <span>-</span>
             <span data-bind="text: team.striker"></span>
-            <span data-bind="text: gamesWon"></span>
-            (<span data-bind="text: gamesPlayed"></span>)
+            <span data-bind="text: gamesWon"></span> / <span data-bind="text: gamesPlayed"></span>
+            (<span data-bind="text: winRatio.toFixed(2)"></span> %)
         </div>
     </div>
 
