--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Kicker Stats v1.0.0</title>
 
     <script src="js/lib/knockout-3.5.0.js"></script>
     <script src="js/statsDataService.js"></script>
