--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -39,7 +39,10 @@
     </style>
 </head>
 <body style="margin: 2em">
-    <h1 data-bind="text: appName"></h1>
+    <h1>
+        <span data-bind="text: appName"></span>
+        <span data-bind="visible: loading">(loading data ...)</span>
+    </h1>
     <div data-bind="visible: loading" class="pure-button pure-button-disabled">Loading data ...</div>
 
     <div data-bind="click: refreshData, hidden: loading" class="pure-button">Refresh data</div>
