--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -74,8 +74,8 @@
     <p class="note">
         Scoring:
         <ul class="note">
-            <li>Win = 10 points (15 points if 10-0 win)</li>
-            <li>Loss = minus 5 points (minus 10 points if 0-10 loss)</li>
+            <li>Win = 10 points (15 points for 10-0 win)</li>
+            <li>Loss = minus 5 points (minus 10 points for 0-10 loss)</li>
             <li>Score doesn't go below 0</li>
         </ul>
     </p>
