Change title Ranking

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -51,7 +51,7 @@
     <table class="pure-table pure-table-bordered">
         <thead>
             <tr>
-                <th>Team</th>
+                <th>Keeper - Striker</th>
                 <th>Score</th>
             </tr>
         </thead>
