--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -88,6 +88,7 @@
                     <th>Striker</th>
                     <th>Won / played</th>
                     <th>Win ratio</th>
+                    <th>Longest streak</th>
                     <th>Score</th>
                 </tr>
             </thead>
@@ -105,6 +106,7 @@
                         <span data-bind="text: winRatio.toFixed(2)"></span>
                         <span>%</span>
                     </td>
+                    <td data-bind="text: longestStreak"></td>
                     <td data-bind="text: score"></td>
                 </tr>
                 <!-- /ko -->
