Tweak elo rating a bit for foosball

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -148,6 +148,15 @@
                 The implication is that winning from a team stronger than you is more benificial for your rating than winning from a weaker team.
             </p>
             <p class="note">
+                The expected result is a value between 0 and 1, for kicker, a game has four possible results per team:
+                <ul class="note">
+                    <li>1.00: Clean win (10 - 0)</li>
+                    <li>0.75: Win</li>
+                    <li>0.25: Loss</li>
+                    <li>0.00: Clean loss (0 - 10)</li>
+                </ul>
+            </p>
+            <p class="note">
                 More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
             </p>
 
