--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -47,11 +47,11 @@
 
     <div data-bind="click: refreshData, hidden: loading" class="pure-button">Refresh data</div>
 
-    <h2>Team Ranking (Top 10)</h2>
+    <h2>Team Ranking</h2>
     <table class="pure-table pure-table-bordered" data-bind="with: analysis().eloRatings">
         <thead>
             <tr>
-                <th></th>
+                <th>Rank</th>
                 <th>Keeper - Striker</th>
                 <th>Rating</th>
             </tr>
@@ -68,44 +68,30 @@
                     <span data-bind="text: team.striker"></span>
                 </td>
                 <td>
-                    <span data-bind="text: rating"></span>
+                    <span data-bind="text: rating.toFixed()"></span>
                 </td>
             </tr>
             <!-- /ko -->
         </tbody>
     </table>
 
-    <div class="pure-g">
-        <div class="pure-u-1-3">
-
-            <p class="note">
-                The Elo rating calculates the expected result of a game between two teams based on their current ratings. By comparing the actual result of the game and the expected result, the rating can be adjusted for next games.
-            </p>
-            <p class="note">
-                The implication is that winning from a team stronger than you is more benificial for your rating than winning from a weaker team.
-            </p>
-            <p class="note">
-                The expected result is a value between 0 and 1, for kicker, a game has four possible results per team:
-                <ul class="note">
-                    <li>1.00: Clean win (10 - 0)</li>
-                    <li>0.75: Win</li>
-                    <li>0.25: Loss</li>
-                    <li>0.00: Clean loss (0 - 10)</li>
-                </ul>
-            </p>
-            <p class="note">
-                More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
-            </p>
-
-        </div>
-    </div>
-
     <p class="note">
-        Scoring:
+        The rating is calculated using the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" algorithm. In the chart it is rounded to an integer.
+    </p>
+    <p class="note">
+        Based on the rating of two teams, it calculates the expected result, compares it to the actual result and adjusts the ratings accordingly. This means winning from a team with a higher rating than you is more benificial than winning from a team with a lower rating.
+    </p>
+    <p class="note">
+        The expected result is a value between 0 and 1, for kicker, a game has four possible results per team:
         <ul class="note">
-            <li>Win = 10 points (15 points for 10-0 win)</li>
-            <li>Loss = minus 5 points (minus 10 points for 0-10 loss)</li>
+            <li>1.00: Clean win (10 - 0)</li>
+            <li>0.75: Win</li>
+            <li>0.25: Loss</li>
+            <li>0.00: Clean loss (0 - 10)</li>
         </ul>
+    </p>
+    <p class="note">
+        More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
     </p>
 
     <h2>Team Stats</h2>
@@ -148,26 +134,26 @@
                 <tr>
                     <th>Date</th>
                     <th>Team A (keeper - striker)</th>
-                    <th>Team B (keeper - striker)</th>
                     <th>Score</th>
+                    <th>Team B (keeper - striker)</th>
                 </tr>
             </thead>
             <tbody>
                 <!-- ko foreach: analysis().rawData -->
                 <tr>
                     <td data-bind="text: date"></td>
-                    <td>
+                    <td data-bind="style: { 'background-color': scoreA === 10 ? '#d2ff62' : '' }">
                         <span data-bind="text: keeperA"></span>
                         -
                         <span data-bind="text: strikerA"></span>
                     </td>
                     <td>
+                        <span data-bind="text: scoreA"></span> - <span data-bind="text: scoreB"></span>
+                    </td>
+                    <td data-bind="style: { 'background-color': scoreB === 10 ? '#d2ff62' : '' }">
                         <span data-bind="text: keeperB"></span>
                         -
                         <span data-bind="text: strikerB"></span>
-                    </td>
-                    <td>
-                        <span data-bind="text: scoreA"></span> - <span data-bind="text: scoreB"></span>
                     </td>
                 </tr>
                 <!-- /ko -->
