--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -47,17 +47,17 @@
 
     <div data-bind="click: refreshData, hidden: loading" class="pure-button">Refresh data</div>
 
-    <h2>Team Ranking</h2>
-    <table class="pure-table pure-table-bordered" data-bind="with: analysis().eloRatings">
+    <h2>Team Ranking (all time)</h2>
+    <table class="pure-table pure-table-bordered" data-bind="with: analysis().stats">
         <thead>
             <tr>
                 <th>Rank</th>
                 <th>Keeper - Striker</th>
-                <th>Rating</th>
+                <th>Rating <a href="#ratingInfo">(?)</a></th>
             </tr>
         </thead>
         <tbody>
-            <!-- ko foreach: ratings -->
+            <!-- ko foreach: teamStats.allTeams -->
             <tr>
                 <td>
                     <span data-bind="text: $index() + 1"></span>
@@ -68,34 +68,15 @@
                     <span data-bind="text: team.striker"></span>
                 </td>
                 <td>
-                    <span data-bind="text: rating.toFixed()"></span>
+                    <span data-bind="text: eloRating.rating.toFixed()"></span>
                 </td>
             </tr>
             <!-- /ko -->
         </tbody>
     </table>
 
-    <p class="note">
-        The rating is calculated using the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" algorithm. In the chart it is rounded to an integer.
-    </p>
-    <p class="note">
-        Based on the rating of two teams, it calculates the expected result, compares it to the actual result and adjusts the ratings accordingly. This means winning from a team with a higher rating than you is more benificial than winning from a team with a lower rating.
-    </p>
-    <p class="note">
-        The expected result is a value between 0 and 1, for kicker, a game has four possible results per team:
-        <ul class="note">
-            <li>1.00: Clean win (10 - 0)</li>
-            <li>0.75: Win</li>
-            <li>0.25: Loss</li>
-            <li>0.00: Clean loss (0 - 10)</li>
-        </ul>
-    </p>
-    <p class="note">
-        More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
-    </p>
-
     <h2>Team Stats</h2>
-    <div>
+    <div data-bind="with: analysis().stats">
         <table class="pure-table pure-table-bordered">
             <thead>
                 <tr>
@@ -104,10 +85,11 @@
                     <th>Won / played</th>
                     <th>Win ratio</th>
                     <th>Longest streak</th>
+                    <th>Rating <a href="#ratingInfo">(?)</a></th>
                 </tr>
             </thead>
             <tbody>
-                <!-- ko foreach: analysis().teamStats -->
+                <!-- ko foreach: teamStats.allTeams -->
                 <tr>
                     <td data-bind="text: team.keeper"></td>
                     <td data-bind="text: team.striker"></td>
@@ -121,6 +103,7 @@
                         <span>%</span>
                     </td>
                     <td data-bind="text: longestStreak"></td>
+                    <td data-bind="text: eloRating.rating.toFixed()"></td>
                 </tr>
                 <!-- /ko -->
             </tbody>
@@ -161,23 +144,36 @@
         </table>
     </div>
 
-    <h2>All Players</h2>
-    <div data-bind="foreach: analysis().allPlayers">
-        <div data-bind="text: $data"></div>
+    <div data-bind="with: analysis().stats">
+        <h2>All Players (<span data-bind="text: playerStats.allPlayers.length"></span>)</h2>
+        <!-- ko foreach: playerStats.allPlayers -->
+        <div data-bind="text: name"></div>
+        <!-- /ko -->
     </div>
 
-    <h2>Raw data</h2>
-    <div data-bind="foreach: analysis().rawData">
-        <!--<pre data-bind="text: ko.toJSON($data, null, 2)"></pre>-->
-        <div data-bind="text: dataTimestampUtc"></div>
-        <span data-bind="text: date"></span>
-        <span data-bind="text: keeperA"></span>
-        <span data-bind="text: strikerA"></span>
-        <span>vs.</span>
-        <span data-bind="text: keeperB"></span>
-        <span data-bind="text: strikerB"></span>
-        <span data-bind="text: scoreA"></span> - <span data-bind="text: scoreB"></span>
+    <h2><a name="ratingInfo">Rating info</a></h2>
+    <div>
+        <p class="note">
+            The rating is calculated using the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" algorithm. In the chart it is rounded to an integer.
+        </p>
+        <p class="note">
+            Based on the rating of two teams, it calculates the expected result, compares it to the actual result and adjusts the ratings accordingly. This means winning from a team with a higher rating than you is more benificial than winning from a team with a lower rating.
+        </p>
+        <p class="note">
+            The expected result is a value between 0 and 1. But in the case of kicker, a game has four possible results per team:
+            <ul class="note">
+                <li>1.00: Clean win (10 - 0)</li>
+                <li>0.75: Win</li>
+                <li>0.25: Loss</li>
+                <li>0.00: Clean loss (0 - 10)</li>
+            </ul>
+        </p>
+        <p class="note">
+            More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
+        </p>
     </div>
+
+    <!--<pre data-bind="text: ko.toJSON($data, null, 2)"></pre>-->
 
     <script>
         let vm = new KickerStatsAppViewModel(kickerStatsDataService);
