--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kicker Stats v1.0.0</title>
 
-    <script src="js/lib/knockout-3.5.0.js"></script>
-    <script src="js/statsDataService.js"></script>
-    <script src="js/analysis.js"></script>
-    <script src="js/app.js"></script>
-
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 
     <style>
@@ -69,167 +64,9 @@
     </style>
 </head>
 <body style="margin: 2em">
-    <h1>
-        <span data-bind="text: appName"></span>
-        <span data-bind="visible: loading">(loading data ...)</span>
-    </h1>
-    <div data-bind="visible: loading" class="pure-button pure-button-disabled">Loading data ...</div>
 
-    <div data-bind="click: refreshData, hidden: loading" class="pure-button">Refresh data</div>
-
-    <h2>Team Ranking (all time)</h2>
-    <table class="pure-table pure-table-bordered" data-bind="with: analysis().stats">
-        <thead>
-            <tr>
-                <th>Rank</th>
-                <th>Keeper - Striker</th>
-                <th>Rating <a href="#ratingInfo">(?)</a></th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- ko foreach: teamStats.allTeams -->
-            <tr data-bind="style: { 'background-color': $index() % 2 === 0 ? '' : '#F8F8F8' }">
-                <td>
-                    <a data-bind="attr: { name: 'rank_' + ($index() + 1) }"><span data-bind="text: $index() + 1"></span></a>
-                </td>
-                <td>
-                    <span data-bind="text: team.keeper"></span>
-                    <span>-</span>
-                    <span data-bind="text: team.striker"></span>
-                </td>
-                <td>
-                    <span data-bind="text: eloRating.rating.toFixed()"></span>
-                </td>
-            </tr>
-            <!-- /ko -->
-        </tbody>
-    </table>
-
-    <h2>Team Stats</h2>
-    <div data-bind="with: analysis().stats">
-        <table class="pure-table pure-table-bordered">
-            <thead>
-                <tr>
-                    <th>Team (keeper - striker)</th>
-                    <th>Won / played</th>
-                    <th>Win ratio</th>
-                    <th>Current streak</th>
-                    <th>Longest streak</th>
-                    <th>Rating <a href="#ratingInfo">(?)</a></th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- ko foreach: teamStats.allTeams -->
-                <tr data-bind="style: { 'background-color': $index() % 2 === 0 ? '' : '#F8F8F8' }">
-                    <td>
-                        <span data-bind="text: team.keeper"></span>
-                        -
-                        <span data-bind="text: team.striker"></span>
-                    </td>
-                    <td>
-                        <span data-bind="text: gamesWon"></span>
-                        /
-                        <span data-bind="text: gamesPlayed"></span>
-                    </td>
-                    <td>
-                        <span data-bind="text: (winRatio * 100).toFixed(2)"></span>
-                        <span>%</span>
-                    </td>
-                    <td data-bind="text: currentStreak"></td>
-                    <td data-bind="text: longestStreak"></td>
-                    <td data-bind="text: eloRating.rating.toFixed()"></td>
-                </tr>
-                <!-- /ko -->
-            </tbody>
-        </table>
-    </div>
-
-    <h2>Player Stats</h2>
-    <div data-bind="with: analysis().stats">
-        <table class="pure-table pure-table-bordered">
-            <thead>
-                <tr>
-                    <th>Player</th>
-                    <th>Won / played</th>
-                    <th>Win ratio</th>
-                    <th>Current streak</th>
-                    <th>Longest streak</th>
-                    <th>Average team rating</th>
-                    <th>Highest ranking team</th>
-                    <th>Preferred position</th>
-                    <th>Best position <a href="#positionInfo">(?)</a></th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- ko foreach: playerStats.allPlayers -->
-                <tr data-bind="style: { 'background-color': $index() % 2 === 0 ? '' : '#F8F8F8' }">
-                    <td data-bind="text: name"></td>
-                    <td>
-                        <span data-bind="text: gamesWon"></span>
-                        /
-                        <span data-bind="text: gamesPlayed"></span>
-                    </td>
-                    <td>
-                        <span data-bind="text: (winRatio * 100).toFixed(2)"></span>
-                        <span>%</span>
-                    </td>
-                    <td data-bind="text: currentStreak"></td>
-                    <td data-bind="text: longestStreak"></td>
-                    <td data-bind="text: averageTeamRating.toFixed()"></td>
-                    <td>
-                        <span data-bind="text: highestRankingTeam.team.keeper"></span>
-                        -
-                        <span data-bind="text: highestRankingTeam.team.striker"></span>
-                        <a data-bind="attr: { href: '#rank_' + (highestRankingTeam.ranking) }">
-                            (<span data-bind="text: highestRankingTeam.ranking"></span>)
-                        </a>
-                    </td>
-                    <td>
-                        <span data-bind="text: preferredPosition.position"></span>
-                        (<span data-bind="text: (preferredPosition.ratio * 100).toFixed()"></span> %)
-                    </td>
-                    <td>
-                        <span data-bind="text: bestPosition.position"></span>
-                        (<span data-bind="text: bestPosition.averageTeamRating.toFixed()"></span>)
-                    </td>
-                </tr>
-                <!-- /ko -->
-            </tbody>
-        </table>
-    </div>
-
-    <h2 data-bind="with: analysis().rawData">Game History (<span data-bind="text: length"></span> games)</h2>
-    <div>
-        <table class="pure-table pure-table-bordered">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Team A (keeper - striker)</th>
-                    <th>Score</th>
-                    <th>Team B (keeper - striker)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- ko foreach: analysis().rawData -->
-                <tr data-bind="style: { 'background-color': $index() % 2 === 0 ? '' : '#F8F8F8' }">
-                    <td data-bind="text: date"></td>
-                    <td data-bind="style: { 'background-color': scoreA === 10 ? '#d2ff62' : '' }">
-                        <span data-bind="text: keeperA"></span>
-                        -
-                        <span data-bind="text: strikerA"></span>
-                    </td>
-                    <td data-bind="style: { 'background-color': scoreA === 0 || scoreB === 0 ? 'black' : '', 'color': scoreA === 0 || scoreB === 0 ? 'white': '' }">
-                        <span data-bind="text: scoreA"></span> - <span data-bind="text: scoreB"></span>
-                    </td>
-                    <td data-bind="style: { 'background-color': scoreB === 10 ? '#d2ff62' : '' }">
-                        <span data-bind="text: keeperB"></span>
-                        -
-                        <span data-bind="text: strikerB"></span>
-                    </td>
-                </tr>
-                <!-- /ko -->
-            </tbody>
-        </table>
+    <div id="app">
+        <overview @refresh-data="refreshData" v-bind:app="$data" />
     </div>
 
     <h2><a name="ratingInfo">Rating info</a></h2>
@@ -267,18 +104,14 @@
         </p>
     </div>
 
-    <!--<pre data-bind="text: ko.toJSON($data, null, 2)"></pre>-->
-
     <a href="https://github.com/AaronLenoir/kicker" class="github-corner" aria-label="View source on GitHub" title="View source on GitHub" target="_blank"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#e0e0e0; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
 
-    <script>
-        let vm = new KickerStatsAppViewModel(kickerStatsDataService);
+    <!-- development version, includes helpful console warnings -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        ko.applyBindings(vm);
+    <script src="js/statsDataService.js"></script>
+    <script src="js/analysis.js"></script>
 
-        kickerStatsDataService.fetchData(true, function (data) {
-            vm.loadData(data);
-        });
-    </script>
+    <script src="js/app-vue.js"></script>
 </body>
 </html>
