--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -66,7 +66,9 @@
 <body style="margin: 2em">
 
     <div id="app">
-        <overview @refresh-data="refreshData" v-bind:app="$data" />
+        <!--<router-link to="/overview">Go to Overview</router-link>-->
+
+        <router-view @refresh-data="refreshData" :app="$data"></router-view>
     </div>
 
     <h2><a name="ratingInfo">Rating info</a></h2>
@@ -108,6 +110,8 @@
 
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
     <script src="js/statsDataService.js"></script>
     <script src="js/analysis.js"></script>
