--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -24,6 +24,10 @@
             margin-top: 2em;
         }
 
+        a {
+            color: black;
+        }
+
         .center {
             justify-content: center;
         }
