Remove v1.0.0 from title

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kicker Stats v1.0.0</title>
+    <title>Kicker stats</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
@@ -159,7 +159,7 @@
 
     <div id="app"  class="content">
         <div class="menu" id="menu">
-            <router-link to="/overview">{{ appName }}</router-link>
+            <router-link to="/overview">overview</router-link>
             <router-link to="/ranking">team ranking</router-link>
             <router-link to="/team-stats">team stats</router-link>
             <router-link to="/player-ranking">player ranking</router-link>
